# domain-ricochet-robots

./: README.md  asp-solve-with-clingo.sh  asp-to-pddl.py  domain.pddl  draw-board.py  eval-plan.py  generate.py  pddl-solve-with-domain_dependent_solver.sh  pddl-to-domaindepsol.py  solve-pddl.py
asp-2015-pddl/: 001-ricochetrobot-12-0.pddl  001-ricochetrobot-12-0.plan  002-ricochetrobot-18-0.pddl  002-ricochetrobot-18-0.plan  003-ricochetrobot-18-0.pddl  003-ricochetrobot-18-0.plan  004-ricochetrobot-20-0.pddl  004-ricochetrobot-20-0.plan  005-ricochetrobot-13-0.pddl  005-ricochetrobot-13-0.plan  006-ricochetrobot-14-0.pddl  006-ricochetrobot-14-0.plan  007-ricochetrobot-17-0.pddl  007-ricochetrobot-17-0.plan  008-ricochetrobot-13-0.pddl  008-ricochetrobot-13-0.plan  009-ricochetrobot-19-0.pddl  009-ricochetrobot-19-0.plan  010-ricochetrobot-14-0.pddl  010-ricochetrobot-14-0.plan  011-ricochetrobot-19-0.pddl  011-ricochetrobot-19-0.plan  (+456 more)
ricochet-robot-solver/: .gitignore  Cargo.toml  README.md  elm-package.json  solve-pddl.py
ricochet-robot-solver/ricli/: Cargo.toml
ricochet-robot-solver/ricli/src/: main.rs
ricochet-robot-solver/ricochet_board/: Cargo.toml
ricochet-robot-solver/ricochet_board/src/: draw.rs  generator.rs  lib.rs
ricochet-robot-solver/ricochet_environment/: Cargo.toml
ricochet-robot-solver/ricochet_environment/src/: builder.rs  lib.rs
ricochet-robot-solver/ricochet_solver/: Cargo.toml
ricochet-robot-solver/ricochet_solver/benches/: benchmarks.rs
ricochet-robot-solver/ricochet_solver/src/: iterative_deepening.rs  mcts.rs  util.rs
(+235 files in other folders)
