[workspace]
members = ["ricochet_board", "ricochet_solver", "ricochet_environment", "ricli"]
default-members = ["ricochet_board", "ricochet_solver", "ricli"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false
